[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyeasyexperiment"
version = "0.1.0"
description = "A simple experiment tracking library for Python projects"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "trader", email = "trader@example.com"}
]
keywords = ["experiment", "tracking", "git", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "psutil>=7.1.3",
]

[tool.setuptools.packages.find]
include = ["pyeasyexperiment*"]

[project.optional-dependencies]
mlflow = [
    "mlflow>=2.0.0",
]
